--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>3D car display system</title>
-    <link rel="icon" type="image/png" href="./NeRV_files/gun_1.png" />
-    <link rel="stylesheet" href="./NeRV_files/font-awesome.min.css" />
-    <link rel="stylesheet" href="./NeRV_files/codemirror.min.css" />
-    <link rel="stylesheet" href="./NeRV_files/app.css" />
-    <link rel="stylesheet" href="./NeRV_files/bootstrap.min.css" />
+    <link rel="icon" type="image/png" href="./NeRV_files1/gun_1.png" />
+    <link rel="stylesheet" href="./NeRV_files1/font-awesome.min.css" />
+    <link rel="stylesheet" href="./NeRV_files1/codemirror.min.css" />
+    <link rel="stylesheet" href="./NeRV_files1/app.css" />
+    <link rel="stylesheet" href="./NeRV_files1/bootstrap.min.css" />
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <style>
@@ -64,19 +64,19 @@
                 <ul class="nav nav-pills nav-justified">
                     <li>
                         <a href="https://drive.google.com/file/d/1resa06kUJ7pnOA6nvawznERCqQwOKKoV/view?usp=sharing">
-                            <img src="./NeRV_files/Report_Project_Page1.jpg" height="120px" /><br />
+                            <img src="./NeRV_files1/Report_Project_Page1.jpg" height="120px" /><br />
                             <h4><strong>Report</strong></h4>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/watch?v=XcfcuMSpp90&feature=youtu.be">
-                            <img src="./NeRV_files/youtube_icon_dark.png" height="120px" /><br />
+                            <img src="./NeRV_files1/youtube_icon_dark.png" height="120px" /><br />
                             <h4><strong>Presentation Video</strong></h4>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/thanadolch007/AI-2022">
-                            <img src="./NeRV_files/github_pad.png" height="120px" /><br />
+                            <img src="./NeRV_files1/github_pad.png" height="120px" /><br />
                             <h4><strong>Code</strong></h4>
                         </a>
                     </li>
@@ -89,7 +89,7 @@
                 <h3>Example Results: Webpage(Prototype)</h3>
                 <hr>
                 <video id="v0" width="100%" autoplay="" loop="" muted="" controls="">
-                    <source src="./NeRV_files/My 3D Model and 18 more pages - Work - Microsoft​ Edge 2565-03-09 19-00-36.mp4" type="video/mp4" />
+                    <source src="./NeRV_files1/My 3D Model and 18 more pages - Work - Microsoft​ Edge 2565-03-09 19-00-36.mp4" type="video/mp4" />
                 </video>
             </div>
         </div>
@@ -98,7 +98,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <h3>Abstract</h3>
                 <hr>
-                <img src="./NeRV_files/flow.png" class="img-responsive" alt="overview" /><br />
+                <img src="./NeRV_files1/flow.png" class="img-responsive" alt="overview" /><br />
                 <p class="text-justify">
                     &emsp;&emsp;&emsp;The impact of the COVID-19 epidemic as a result, preventive measures against COVID-19 are social distancing and wearing masks. People travel less to reduce the chance of infection and due to the spread of covid-19 virus also resulted in the current economy in a deteriorating direction Most of the companies were affected by the decline in revenue, for example, used car dealers.
                     <br />&emsp;&emsp;&emsp;Each time the customer purchases a car, customers must to come at showroom and inspect the car by themselves. May result in a chance to be at risk of contracting COVID-19 that is currently spreading heavily even if there are preventive measures and another way that customers will be able to inspect the car is Viewing photos of cars the customer wants to check. But the picture can only show the car in certain angles. The customer may not see the view of the car with defects.
